automation/awslbingress/ingressresource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stockprice-automation
  namespace: automation-tools
  annotations:
    # Load Balancer Name
    alb.ingress.kubernetes.io/load-balancer-name: stockprice-automation
    # Ingress Core Settings
    alb.ingress.kubernetes.io/scheme: internet-facing
    # # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '10'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'   
spec:
  ingressClassName: stockprice  # Ingress Class                       
  rules:
    - http:
        paths:           
          - path: /argocd
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port: 
                  number: 80      
          # - path: /jenkins
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: jenkins-service
          #       port: 
          #         number: 8080
